[FEAT]: Introduce content streaming and markdown
